--- a/home.html
+++ b/home.html
@@ -1,4 +1,4 @@
-<%@page import="jobsite.ConnectionProvider"%>
+<!-- <%@page import="jobsite.ConnectionProvider"%> -->
 <%@page import="java.sql.*" %>
 <!DOCTYPE html>
 <html lang="en">
